# CSVLotte

./: .gitignore  ACTIONS_FIX.md  BRANCHING_STRATEGY.md  DEPLOYMENT.md  LICENSE  README.md  build.bat  build.py  build.sh  embed_readme.py  installer.iss  pyproject.toml  pytest.ini  release.py  release_to_main.py  requirements.txt
.github/workflows/: build.yml  dev.yml
backup/: sqlfilter.py
hooks/: hook-csvlotte.py
src/: main.py
src/csvlotte/: csvlotte.py
src/csvlotte/assets/: logo.icns  translations.json
src/csvlotte/controllers/: compare_export_controller.py  filter_controller.py  filter_export_controller.py  home_controller.py
src/csvlotte/utils/: helpers.py  translation.py
src/csvlotte/views/: compare_export_view.py  filter_export_view.py  filter_view.py  home_view.py  menubar_settings_view.py
tests/: test_helpers.py  test_home_controller.py  test_home_view.py  test_translation.py
