[project]
name = "csvlotte"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Waschul",email = "xy@xy.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "csvlotte", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
