[project]
name = "csvlotte"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Waschul",email = "xy@xy.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "tkhtmlview (>=0.3.1,<0.4.0)"
]

[tool.poetry]
packages = [{include = "csvlotte", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
